crates/lsharp-ir/src/snapshots/lsharp_ir__lower__tests__lower_arithmetic.snap
---
source: crates/lsharp-ir/src/lower.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 3
  i64.const 4
  i64.mul
  i64.const 5
  i64.add
