crates/lsharp-ir/src/snapshots/lsharp_ir__lower__tests__lower_comparison.snap
---
source: crates/lsharp-ir/src/lower.rs
expression: module.dump()
---
fn main() -> i64:
  i64.const 1
  i64.const 2
  i64.lt_s
  i64.extend_i32_s
