crates/lsharp-ir/src/snapshots/lsharp_ir__lower__tests__lower_recursive_function.snap
---
source: crates/lsharp-ir/src/lower.rs
expression: module.dump()
---
fn fib(i64) -> i64:
  local.get 0
  i64.const 1
  i64.le_s
  i64.extend_i32_s
  i32.wrap_i64
  if (i64)
  local.get 0
  else
  local.get 0
  i64.const 1
  i64.sub
  call 1
  local.get 0
  i64.const 2
  i64.sub
  call 1
  i64.add
  end

fn main() -> i64:
  i64.const 10
  call 1
